# MultiDomain-ROM

./: .gitignore  CMakeLists.txt  README.MD
config/: config.yaml  config_3D.yaml
inc/: control.h  control_3D.h  dynamics.h  dynamics_3D.h  types.h  types_3D.h
inc/control/: control.h  control_3D.h
inc/dynamics/: dynamics.h  dynamics_3D.h
inc/types/: types.h  types_3D.h
scripts/: plot_data.m  plot_data_3D.m  plot_distribution.m
src/: control.cpp  control_3D.cpp  dynamics.cpp  dynamics_3D.cpp  main.cpp  main_3D.cpp
